--- a/package.json
+++ b/package.json
@@ -7,7 +7,27 @@
         "start": "node src/main.js"
     },
     "devDependencies": {
-        "@apify/eslint-config": "^0.1.4",
-        "eslint": "^7.28.0"
+        "@apify/consts": "^2.1.0",
+        "@apify/eslint-config": "^0.3.1",
+        "@apify/eslint-config-ts": "^0.2.3",
+        "@apify/utilities": "^2.1.2",
+        "@crawlee/memory-storage": "^3.0.0",
+        "@types/fs-extra": "^9.0.13",
+        "@types/jest": "^28.1.6",
+        "apify": "^3.0.1",
+        "archiver-promise": "^1.0.0",
+        "crawlee": "^3.0.0",
+        "eslint": "^8.20.0",
+        "fs-extra": "^10.1.0",
+        "globby": "^11.1.0",
+        "jest": "^28.1.3",
+        "jest-circus": "^28.1.3",
+        "load-json-file": "^6.2.0",
+        "mustache": "^4.2.0",
+        "playwright": "^1.23.4",
+        "puppeteer": "^14.4.1",
+        "recursive-copy": "^2.0.14",
+        "rimraf": "^3.0.2",
+        "sinon": "^14.0.0"
     }
 }
